Blazor.WinOld.Components/Components/Dialog/WinOldDialogHost.razor.css
.dlg-win-backdrop {
    position: fixed;
    inset: 0;
    z-index: 99999;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.title-bar-controls {
    display: flex;
}

.dlg-win {
    display: flex;
    flex-direction: column;
}

.dlg-win-body {
    flex: 1 1 auto;
    overflow: auto;
}


/*-------------------------------------------*\
    Win XP
\*-------------------------------------------*/
.dlg-win-xp {
    font-size: 11px;
    -webkit-font-smoothing: antialiased;
    box-shadow: inset -1px -1px #00138c, inset 1px 1px #0831d9, inset -2px -2px #001ea0, inset 2px 2px #166aee, inset -3px -3px #003bda, inset 3px 3px #0855dd;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    padding: 0 0 3px;
    background: var(--winxp-background);
    text-align: left;
    max-width: 410px;
    width: auto;
    animation: fadeIn 0.2s ease;
}

.title-bar-win-xp {
    font-family: Trebuchet MS;
    font-size: 13px;
    background: linear-gradient(180deg, #0997ff, #0053ee 8%, #0050ee 40%, #06f 88%, #06f 93%, #005bff 95%, #003dd7 96%, #003dd7);
    padding: 3px 5px 3px 3px;
    border-top: 1px solid #0831d9;
    border-left: 1px solid #0831d9;
    border-right: 1px solid #001ea0;
    border-top-left-radius: 8px;
    border-top-right-radius: 7px;
    font-size: 13px;
    text-shadow: 1px 1px #0f1089;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.title-bar-text-win-xp {
    padding-left: 3px;
    font-weight: 700;
    color: #fff;
    letter-spacing: 0;
    margin-right: 24px;
}

.title-bar-controls-win-xp button:active,
.title-bar-controls-win-xp button:focus,
.title-bar-controls-win-xp button:hover {
    box-shadow: none !important
}
/* ... */

